Created creamy_crustacean_omelette.html, fluffy_chiffon_cake.html, grilled_mighty_barranumdi.html, and pics/. Created boilerplate for each .html file. Added links to index.html.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     
     <body>
-        <h1>Final Fantasy XV Recipes </h1>
+        <h1>Final Fantasy XV Recipes ファイナルファンタジーXVでの世界レシピ</h1>
+        <ul>
+            <li><a href="./creamy_crustacean_omelette.html">Creamy Crustacean Omelette</a></li>
+            <li><a href="./fluffy_chiffon_cake.html">Fluffy Chiffon Cake</a></li>
+            <li><a href="./grilled_mighty_barramundi.html">Grilled Might Barramundi</a></li>
+        </ul>
     </body>
 </html>
