Added about me file to website. added back to homepage link on each recipe site.

--- a/creamy_crustacean_omelette.html
+++ b/creamy_crustacean_omelette.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Creamy Crustacean Omelette</h1>
+    <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
