--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     </head>
     
     <body>
-        <h1>Final Fantasy XV Recipes ファイナルファンタジーXVでの世界レシピ</h1>
+        <h1>Final Fantasy XV Recipes</h1>
+        <h1>ファイナルファンタジーXVでの世界レシピ</h1>
         <ul>
-            <li><a href="./creamy_crustacean_omelette.html">Creamy Crustacean Omelette</a></li>
-            <li><a href="./fluffy_chiffon_cake.html">Fluffy Chiffon Cake</a></li>
-            <li><a href="./grilled_mighty_barramundi.html">Grilled Might Barramundi</a></li>
+            <p><li><a href="./creamy_crustacean_omelette.html">Creamy Crustacean Omelette</a></li></p>
+            <p><li><a href="./fluffy_chiffon_cake.html">Fluffy Chiffon Cake</a></li></p>
+            <p><li><a href="./grilled_mighty_barramundi.html">Grilled Might Barramundi</a></li></p>
         </ul>
+        <h4><a href="./about.html">About me</a></h4>
     </body>
 </html>
