--- a/grilled_mighty_barramundi.html
+++ b/grilled_mighty_barramundi.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Grilled Mighty Barramundi</h1>
+    <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
