--- a/creamy_crustacean_omelette.html
+++ b/creamy_crustacean_omelette.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Creamy Crustacean Omelette</h1>
+    <img src="../odin-recipes/pics/Creamy_Crustacean_Omelette.jpg" alt="Creamy Crustacean">
     <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
