--- a/fluffy_chiffon_cake.html
+++ b/fluffy_chiffon_cake.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Fluffy Chiffon Cake</h1>
+    <img src="../odin-recipes/pics/Fluffy_Chiffon_Cake.jpg" alt="Fluffy Chiffon Cake">
     <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
