--- a/grilled_mighty_barramundi.html
+++ b/grilled_mighty_barramundi.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Grilled Mighty Barramundi</h1>
+    <img src="../odin-recipes/pics/Grilled_Mighty_Barramundi.jpg" alt="Grilled Might Barramundi">
     <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
