--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Final Fantasy XV Recipes</h1>
         <h1>ファイナルファンタジーXVでの世界レシピ</h1>
+        <img src="../odin-recipes/pics/campfire.jpg" alt="Friends eating by a campfire :-)">
+        <!--This really showcases what the eccense of what the game is all about. Just four friends going through a marvelous journey together to save the world-->
         <ul>
             <p><li><a href="./creamy_crustacean_omelette.html">Creamy Crustacean Omelette</a></li></p>
             <p><li><a href="./fluffy_chiffon_cake.html">Fluffy Chiffon Cake</a></li></p>
