Added description, required items, and steps to all ingredients.

--- a/creamy_crustacean_omelette.html
+++ b/creamy_crustacean_omelette.html
@@ -9,6 +9,30 @@
 <body>
     <h1>Creamy Crustacean Omelette</h1>
     <img src="../odin-recipes/pics/Creamy_Crustacean_Omelette.jpg" alt="Creamy Crustacean">
+    <h3>Description</h3>
+    <p>This delicious meal increases strength by 100, increases mazimum HP by 400 and gives a magic boost of 10. </p>
+    <strong>Required items</strong>
+    <ul>
+        <li><em>Shieldshears Claw</em></li>
+        <li><em>Birdbeast Egg</em></li>
+        <li><em>Eos Green Peas</em></li>
+    </ul>
+    <p><strong>Steps</strong></p>
+    <ol>
+        <li>Wash the rice and place it into a claypot or non-stick pot, along with all the other ingredients listed above.</li>
+        <li>Cover and cook for about 20 mins on low heat. Test a grain to see whether it is done.</li>
+        <li>Mix well, and put into a bowl, packing it slightly so that it will retain its shape after you turn it over.</li>
+        <li>Turn rice over onto deep soup plate.</li>
+        <li>Beat all the eggs while heating up a large non-stick pan with oil.</li>
+        <li>If you just want to make a giant one to share between 2 people, use all of it at once, if not, use half at a time. Scramble desired amount of egg just as it hits the pan, and cover to let it settle into a semi-omelette.</li>
+        <li>When the egg is half-done, quickly slide it off the pan onto the rice. Since the egg is not fully cooked, this is why it’s called ‘creamy’.</li>
+        <li>In the same pan, wiped clean with a paper towel, put the toppings (dashi, peas and crab pieces) and heat till it simmers.</li>
+        <li>When it starts to simmer, add in the soy sauce, oyster sauce and vinegar. Mix well.</li>
+        <li>Mix the starch and water to form a slurry.</li>
+        <li>After a minute of simmering, or when both peas and crab are cooked, switch off the heat and mix the slurry in. Keep stirring until the entire sauce is evenly thick.</li>
+        <li>Arrange the three crab pieces on top per omelette, and pour the sauce and peas over the rice!</li>
+        <li>Gain 100 in Attack and Magic, and increase your HP by over 400!</li>
+    </ol>
     <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
