--- a/fluffy_chiffon_cake.html
+++ b/fluffy_chiffon_cake.html
@@ -9,6 +9,29 @@
 <body>
     <h1>Fluffy Chiffon Cake</h1>
     <img src="../odin-recipes/pics/Fluffy_Chiffon_Cake.jpg" alt="Fluffy Chiffon Cake">
+    <h3>Description</h3>
+    <p>This amazing dessert boost your vitality by 200, spriting by 400, and Max HP by 1,000.</p>
+    <p><strong>Required items</strong></p>
+    <ul>
+        <li><em>Cleigne Wheat</em></li>
+        <li><em>Leiden Potato</em></li>
+    </ul>
+    <p><strong>Steps</strong></p>
+    <ol>
+        <li>Preheat your oven to 355 degrees F.
+            <p>Add the egg yolks, vegetable oil, water, vanilla, salt, and half of the sugar to a large mixing bowl. Whisk well to combine. (The remaining half of the sugar will be used for the egg whites.)</p></li>
+        <li>Sift the cake flour and baking powder, into the egg yolk mixture in three batches. Fold after each time until well combined. Avoid over mixing.</li>
+        <li>Add the egg whites and cream of tarter to a large mixing bowl. Beat on medium high speed while adding the remaining half of the sugar. Add the sugar in three batches until you've reached firm peaks.</li>
+        <li>Add half the beaten egg whites to the egg yolk mixture. Fold gently to combine then add the remaining half. Fold gently again to avoid deflating the batter. The batter should be light, airy, and fluffy.</li>
+        <li>Spray the inside of your ungreased, aluminum chiffon cake pan with water including the inner tube. This helps prevent the cake from sticking too much to the pan once baked.
+            <p>Pour the batter into the pan and fill up to 75% full otherwise you may risk overflow.</p></li>
+        <li>Bake at 355 degrees F for 25 to 35 minutes. Your baking time will depend on how shallow or deep your pan is.
+            <p>Check after 25 minutes for doneness. It's ready when a toothpick inserted in the center comes out clean and the top is a golden brown color. If your pan is tall and deep, you may have to bake it longer.</p></li>
+        <li>Remove from the oven and immediately flip the chiffon pan upside down to invert it. Cool it down as soon as possible to prevent it from sinking and deflating.
+            <p>Drape a cold, damp towel over it to cool it down as quickly as possible. Rinse the towel under cold water and wring it dry. Drape it over the pan again and repeat this process until the pan is no longer hot. </p></li>
+        <li>Once the cake has cooled, flip over the pan and carefully run a knife along the sides of the pan to help remove it. Then run a knife along the bottom of the pan to remove it from the base.</li>
+        <li>Invert the cake again so the flat side is facing up and dust on powdered sugar. Slice and serve.</li>
+    </ol>
     <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
