--- a/grilled_mighty_barramundi.html
+++ b/grilled_mighty_barramundi.html
@@ -9,6 +9,22 @@
 <body>
     <h1>Grilled Mighty Barramundi</h1>
     <img src="../odin-recipes/pics/Grilled_Mighty_Barramundi.jpg" alt="Grilled Might Barramundi">
+    <h3>Description</h3>
+    <p>Eating this hearty fish helps prevent most ailmets and nullifies enemies using ice, fire, and lightninig attacks.</p>
+    <strong>Required items</strong>
+    <ul>
+        <li><em>Mighty Barramundi Fillet</em></li>
+        <li><em>Kettier Ginger</em></li>
+    </ul>
+    <p><strong>Steps</strong></p>
+    <ol>
+        <li>In a small bowl combine the paprika, smoked paprika, dried cilantro, oregano, coriander powder, garlic powder, salt, and black pepper. Mix well. Brush the fillet with 1 tablespoon (15mL) of olive oil, and then rub the fillet gently with the spice mixture. Refrigerate for at least 30 minutes or up to 12 hours.
+            Preheat the oven to 450°F (232°C).</li>
+        <li>Preheat the oven to 450°F (232°C).</li>
+        <li>Meanwhile, in a small saucepan, melt the butter over medium-high heat with another tablespoon (15mL) of olive oil. Add in the finely chopped cilantro and the lime zest and juice, and swirl the pan to mix.</li>
+        <li>Lay the fish on the pan, skin side down. Baste the fish in the lime- cilantro mixture for 1.5-2 minutes, before flipping and repeating for another 2 minutes. Baste with the remaining tablespoon (15mL) of olive oil before removing from pan.</li>
+        <li>Move the fish to a foil-lined baking sheet and roast in the oven for 10-12 minutes – the fish will flake easily and turn opaque throughout when it’s cooked through.</li>
+    </ol>
     <h3><a href="./index.html">Return to homepage</a></h3>
 </body>
 </html>
